<package>
  <name>camshift</name>
  <version>1.0.0</version>
  <description>camshift tracking package</description>

  <maintainer email="binmatrix@163.com">BinMatrix</maintainer>

  <author>Yegui Du</author>

  <license>BSD</license>

  <url type="website">https://bitbucket.org/HITSZ-NRSL/camshift</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
